[ENHANCEMENT] Update path

--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="../css/about.css">
 
 </head>
 
@@ -52,7 +52,7 @@
 
     <div class="main">
         <div class="img">
-            <img src="/img/banner/puppy-5124947_1920.jpg" alt="">
+            <img src="../img/banner/puppy-5124947_1920.jpg" alt="">
             <div class="img-blur"></div>
         </div>
         <div class="main-text">
@@ -81,7 +81,7 @@
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
