--- a/html/homepage.html
+++ b/html/homepage.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- swiper-css -->
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
 
 </head>
 
@@ -57,7 +57,7 @@
 
         <div class="banner">
             <div class="banner-img">
-                <img src="/img/banner/dog-5357794_1920.jpg" alt="">
+                <img src="../img/banner/dog-5357794_1920.jpg" alt="">
                 <div class="text-bg">
                     <span>Welcome to <br> Zhulie's Pet Care</span>
                 </div>
@@ -69,22 +69,22 @@
             <span class="box-title">Our Services</span>
             <ul>
                 <li>
-                    <img src="/img/services/home.png" class="service-icon">
+                    <img src="../img/services/home.png" class="service-icon">
                     <h3 class="service-name">Pet Broading</h3>
                     <a href="" class="action-btn">Book Now</a>
                 </li>
                 <li>
-                    <img src="/img/services/dog-sitting.png" class="service-icon">
+                    <img src="../img/services/dog-sitting.png" class="service-icon">
                     <h3 class="service-name">Pet Sitting</h3>
                     <a href="" class="action-btn">Book now</a>
                 </li>
                 <li>
-                    <img src="/img/services/salon.png" class="service-icon">
+                    <img src="../img/services/salon.png" class="service-icon">
                     <h3 class="service-name">Pet Grooming</h3>
                     <a href="" class="action-btn">Book Now</a>
                 </li>
                 <li>
-                    <img src="/img/services/healthcare.png" class="service-icon">
+                    <img src="../img/services/healthcare.png" class="service-icon">
                     <h3 class="service-name">Health Care</h3>
                     <a href="" class="action-btn">Book now</a>
                 </li>
@@ -97,27 +97,27 @@
             <span class="box-title">Best Selling Food Brands</span>
             <ul>
                 <li class="img-1">
-                    <img src="/img/dogfood/Blue Buffalo.jpg" class="mini-img" alt="">
+                    <img src="../img/dogfood/Blue Buffalo.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Blue Buffalo</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-2">
-                    <img src="/img/dogfood/RoyalCanin.jpg" class="mini-img" alt="">
+                    <img src="../img/dogfood/RoyalCanin.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Royal Canin</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-3">
-                    <img src="/img/dogfood/Hill's Science Diet.jpg" class="mini-img" alt="">
+                    <img src="../img/dogfood/Hill's Science Diet.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Hill's Science Diet</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-4">
-                    <img src="/img/dogfood/Pedigree.jpg" class="mini-img" alt="">
+                    <img src="../img/dogfood/Pedigree.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Pedigree</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-5">
-                    <img src="/img/dogfood/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
+                    <img src="../img/dogfood/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
                         class="mini-img" alt="">
                     <h3 class="box-description">Dog Nip! Dog Chews</h3>
                     <a href="" class="action-btn">See details</a>
@@ -130,29 +130,29 @@
             <span class="box-title">Best Selling Product Brands</span>
             <ul>
                 <li class="img-1">
-                    <img src="/img/dogproducts/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg"
+                    <img src="../img/dogproducts/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg"
                         class="mini-img" alt="">
                     <h3 class="box-description">Nootie - Pet Shampoo for Sensitive Skin </h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-2">
-                    <img src="/img/dogproducts/Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit.jpg"
+                    <img src="../img/dogproducts/Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit.jpg"
                         class="mini-img" alt="">
                     <h3 class="box-description">Vet's Enzymatic Toothpaste Kit</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-3">
-                    <img src="/img/dogproducts/Pet MD - Dog Ear Cleaner Wipes.jpg" class="mini-img" alt="">
+                    <img src="../img/dogproducts/Pet MD - Dog Ear Cleaner Wipes.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Pet MD - Dog Ear Cleaner Wipes</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-4">
-                    <img src="/img/dogproducts/Fuzzyard Beer Bottle Plush Dog Toy.jpg" class="mini-img" alt="">
+                    <img src="../img/dogproducts/Fuzzyard Beer Bottle Plush Dog Toy.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Fuzzyard Beer Bottle Plush Dog Toy</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-5">
-                    <img src="/img/dogproducts/Adjustable Collar.jpg" class="mini-img" alt="">
+                    <img src="../img/dogproducts/Adjustable Collar.jpg" class="mini-img" alt="">
                     <h3 class="box-description">Adjustable Collar</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
@@ -164,8 +164,7 @@
     <section class="footer">
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
-    <script src="/js/script.js"></script>
-    <script src="/js/swiper-bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
