--- a/html/plan.html
+++ b/html/plan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="\css\plan.css">
+    <link rel="stylesheet" href="../css/plan.css">
 
     <!-- swiper-css -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
@@ -110,7 +110,7 @@
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
