--- a/html/services.html
+++ b/html/services.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="\css\services.css">
-
-    <!-- swiper-css -->
-    <link rel="stylesheet" href="swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/services.css">
 
 </head>
 
@@ -57,32 +54,32 @@
         <h1>Our <span>Services</span></h1>
         <div class="main-container">
             <div class="service-container">
-                <img src="/img/services/home.png" class="service-icon">
+                <img src="../img/services/home.png" class="service-icon">
                 <div class="service-title">Pet Boarding</div>
                 <button class="action-btn">Read More</button>
             </div>
             <div class="service-container">
-                <img src="/img/services/dog-sitting.png" class="service-icon">
+                <img src="../img/services/dog-sitting.png" class="service-icon">
                 <div class="service-title">Pet Sitting</div>
                 <button class="action-btn">Read More</button>
             </div>
             <div class="service-container">
-                <img src="/img/services/salon.png" class="service-icon">
+                <img src="../img/services/salon.png" class="service-icon">
                 <div class="service-title">Spa and Grooming</div>
                 <button class="action-btn">Read More</button>
             </div>
             <div class="service-container">
-                <img src="/img/services/healthcare.png" class="service-icon">
+                <img src="../img/services/healthcare.png" class="service-icon">
                 <div class="service-title">Health Care</div>
                 <button class="action-btn">Read More</button>
             </div>
             <div class="service-container">
-                <img src="/img/services/pet-shop.png" class="service-icon">
+                <img src="../img/services/pet-shop.png" class="service-icon">
                 <div class="service-title">Shop</div>
                 <button class="action-btn">Read More</button>
             </div>
             <div class="service-container">
-                <img src="/img/services/pet-taxi.png" class="service-icon">
+                <img src="../img/services/pet-taxi.png" class="service-icon">
                 <div class="service-title">Pet Taxi Service</div>
                 <button class="action-btn">Read More</button>
             </div>
@@ -93,7 +90,7 @@
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
