--- a/html/shop.html
+++ b/html/shop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="\css\shop.css">
+    <link rel="stylesheet" href="../css/shop.css">
 
 </head>
 
@@ -60,7 +60,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Blue Buffalo.jpg" class="product-img">
+                    <img src="../img/shop/food/Blue Buffalo.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Blue Buffalo</h3>
@@ -74,7 +74,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/RoyalCanin.jpg" class="product-img">
+                    <img src="../img/shop/food/RoyalCanin.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Royal Canin</h3>
@@ -88,7 +88,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="\img\shop\food\Hill's Science Diet.jpg" class="product-img">
+                    <img src="../img/shop/food/Hill's Science Diet.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Hill's Science Diet</h3>
@@ -102,7 +102,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Pedigree.jpg" class="product-img">
+                    <img src="../img/shop/food/Pedigree.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Pedigree</h3>
@@ -116,7 +116,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
+                    <img src="../img/shop/food/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -131,7 +131,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Gobble! 6-Inch Turkey Tendon Strips for Dogs, 6 oz. (170g).jpg"
+                    <img src="../img/shop/food/Gobble! 6-Inch Turkey Tendon Strips for Dogs, 6 oz. (170g).jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -146,7 +146,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Milk-Bone Mini Comfort Chews, Dog Treats with Unique Chewy Texture and Real Beef, 6 Mini Chews.jpg"
+                    <img src="../img/shop/food/Milk-Bone Mini Comfort Chews, Dog Treats with Unique Chewy Texture and Real Beef, 6 Mini Chews.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -161,7 +161,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/N-Bone Puppy Teething Rings Peanut Butter Flavor Dog Treat, 6 Count Bag, 7.2-oz.jpg"
+                    <img src="../img/shop/food/N-Bone Puppy Teething Rings Peanut Butter Flavor Dog Treat, 6 Count Bag, 7.2-oz.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -176,7 +176,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/N-Bone Puppy Teething Treats,Chicken, 3.74 oz.jpg" class="product-img">
+                    <img src="../img/shop/food/N-Bone Puppy Teething Treats,Chicken, 3.74 oz.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>N-Bone Puppy Teething Treats,Chicken</h3>
@@ -190,7 +190,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Purina Pro Plan Veterinary Supplements FortiFlora Dog Probiotic Supplement, Canine Nutritional Supplement - (72) 30 ct. Boxes.jpg"
+                    <img src="../img/shop/food/Purina Pro Plan Veterinary Supplements FortiFlora Dog Probiotic Supplement, Canine Nutritional Supplement - (72) 30 ct. Boxes.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -205,7 +205,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Rachael Ray Nutrish Premium Natural Dry Dog Food, Real Chicken & Veggies Recipe, 40 Pound Bag.jpg"
+                    <img src="../img/shop/food/Rachael Ray Nutrish Premium Natural Dry Dog Food, Real Chicken & Veggies Recipe, 40 Pound Bag.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -220,7 +220,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/N-Bone Quado Interactive Chew, Ginormous Peanut Flavor (1 Pack), Large.jpg"
+                    <img src="../img/shop/food/N-Bone Quado Interactive Chew, Ginormous Peanut Flavor (1 Pack), Large.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -235,7 +235,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Honest Paws Probiotics for Dogs .jpg" class="product-img">
+                    <img src="../img/shop/Honest Paws Probiotics for Dogs .jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Honest Paws Probiotics</h3>
@@ -249,7 +249,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg"
+                    <img src="../img/shop/shampoo/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -264,7 +264,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Bio-Groom So-Gentle Hypoallergenic Dog Shampoo.jpg" class="product-img">
+                    <img src="../img/shop/shampoo/Bio-Groom So-Gentle Hypoallergenic Dog Shampoo.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Bio-Groom So-Gentle Hypoallergenic Dog Shampoo</h3>
@@ -278,7 +278,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Burt's Bees for Pets Natural Skin Soothing Shampoo with Honey.jpg"
+                    <img src="../img/shop/shampoo/Burt's Bees for Pets Natural Skin Soothing Shampoo with Honey.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -293,7 +293,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Hartz18OZ Puppy Shampoo.jpg" class="product-img">
+                    <img src="../img/shop/shampoo/Hartz18OZ Puppy Shampoo.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Hartz Puppy Shampoo</h3>
@@ -307,7 +307,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit.jpg" class="product-img">
+                    <img src="../img/shop/Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit</h3>
@@ -321,7 +321,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Pet MD - Dog Ear Cleaner Wipes.jpg" class="product-img">
+                    <img src="../img/shop/Pet MD - Dog Ear Cleaner Wipes.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Pet MD - Dog Ear Cleaner Wipes</h3>
@@ -335,7 +335,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Petkin Fingertip Eye Wipes for Dogs and Cats, 50 Finger Wipes.jpg"
+                    <img src="../img/shop/Petkin Fingertip Eye Wipes for Dogs and Cats, 50 Finger Wipes.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -350,7 +350,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Best Pet Supplies (22.5 x 22) Disposable Puppy Pads for Whelping Puppies and Training Dogs.jpg"
+                    <img src="../img/shop/Best Pet Supplies (22.5 x 22) Disposable Puppy Pads for Whelping Puppies and Training Dogs.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -365,7 +365,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Adjustable Collar.jpg" class="product-img">
+                    <img src="../img/shop/Adjustable Collar.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Adjustable Collar</h3>
@@ -379,7 +379,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Fuzzyard Beer Bottle Plush Dog Toy.jpg" class="product-img">
+                    <img src="../img/shop/Fuzzyard Beer Bottle Plush Dog Toy.jpg" class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Fuzzyard Beer Bottle Plush Dog Toy</h3>
@@ -393,7 +393,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/IRIS USA Pee Pads Square Pet Training Pad Holder for Dogs, Dark Gray.jpg"
+                    <img src="../img/shop/IRIS USA Pee Pads Square Pet Training Pad Holder for Dogs, Dark Gray.jpg"
                         class="product-img">
                 </div>
                 <div class="product-description">
@@ -408,7 +408,7 @@
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
