--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
     </header>
     <div class="main-body">
         <div class="img">
-            <img src="/img/banner/cropped-jamie-street-RpeuCX-Vaoc-unsplash.jpg" alt="">
+            <img src="../img/banner/cropped-jamie-street-RpeuCX-Vaoc-unsplash.jpg" alt="">
             <h1>We're Here For <br> You(r Pets)</h1><br>
         </div>
         <div class="contact">
@@ -76,7 +76,7 @@
     </section>
 
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
